# jsonsrt-hs

./: .gitignore  cabal.project.freeze  json-sort.cabal  jsonsrt.cabal  makefile  package.yaml  readme.txt  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
app/: Main.hs
src/: Jsonish.hs  Options.hs
src/Data/: Jsonish.hs
src/Data/Jsonish/: Format.hs
src/Jsonsrt/: App.hs  Args.hs  Format.hs  Node.hs  Options.hs  Parse.hs  Sort.hs
test/: JsonishSpec.hs
test/Data/: JsonishSpec.hs
test/Jsonsrt/: AppSpec.hs  ArgsSpec.hs  FormatSpec.hs  ParseSpec.hs  SortSpec.hs
