cabal-version: 2.4
name: json-sort
version: 0.1.0.0

library lib
  exposed-modules:
    Data.Jsonish
    Options
  other-modules:
    Paths_json_sort
  hs-source-dirs:
    src
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    base,
    binary,
    bytestring,
    megaparsec,
    optparse-generic,
  default-language: Haskell2010

executable json-sort
  main-is: Main.hs
  other-modules:
    Paths_json_sort
  hs-source-dirs:
    app
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    lib,
    base,
    bytestring,
    optparse-generic,
    text,
  default-language: Haskell2010

test-suite json-sort-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Data.JsonishSpec
    Paths_json_sort
  hs-source-dirs:
    test
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    lib,
    base,
    bytestring,
    hspec,
    string-interpolate,
    text,
  default-language: Haskell2010
