cabal-version: 2.4
name: jsonsrt
version: 0.1

library lib
  exposed-modules:
    Jsonsrt.Format
    Jsonsrt.Node
    Jsonsrt.Options
    Jsonsrt.Parse
    Jsonsrt.Sort
  other-modules:
    Paths_jsonsrt
  hs-source-dirs:
    src
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    base,
    megaparsec,
    optparse-generic,
    text,
  default-language: Haskell2010

executable jsonsrt
  main-is: Main.hs
  other-modules:
    Paths_jsonsrt
  hs-source-dirs:
    app
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    lib,
    base,
    optparse-generic,
    text,
  default-language: Haskell2010

test-suite jsonsrt-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Jsonsrt.FormatSpec
    Jsonsrt.ParseSpec
    Jsonsrt.SortSpec
    Paths_jsonsrt
  hs-source-dirs:
    test
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
    lib,
    base,
    hspec,
    string-interpolate,
    text,
  default-language: Haskell2010
